Fix z-index on download button #37

--- a/resources/sass/components/board-cards.scss
+++ b/resources/sass/components/board-cards.scss
@@ -64,6 +64,7 @@
 
   .__documentation__card__download__ {
     position: absolute;
+    z-index: 3;
     bottom: 20px;
     right: 20px;
     width: 185px;
